--- a/src/pages/home/components/Restaurants/Restaurants.module.css
+++ b/src/pages/home/components/Restaurants/Restaurants.module.css
@@ -35,6 +35,14 @@
     scrollbar-width: thin;
 }
 
+@media (max-width: 575px) {
+    .list {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding: 20px;
+    }
+}
+
 .list::-webkit-scrollbar {
     height: 5px;
 }
